--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -36,6 +36,12 @@
             <setting name="doAutochange" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="startpage" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="sendtime" serializeAs="String">
+                <value>10</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
