--- a/keyboardmgr/keyboardmgr.vbproj
+++ b/keyboardmgr/keyboardmgr.vbproj
@@ -66,7 +66,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>键盘管家.ico</ApplicationIcon>
+    <ApplicationIcon>新图标.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
@@ -97,6 +97,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DlgModule.vb" />
     <Compile Include="err.Designer.vb">
       <DependentUpon>err.vb</DependentUpon>
     </Compile>
@@ -176,6 +177,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="exp.resx">
+      <DependentUpon>exp.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
@@ -184,6 +188,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form3.resx">
       <DependentUpon>Form3.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form4.resx">
+      <DependentUpon>Form4.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="info.resx">
+      <DependentUpon>info.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -222,6 +232,7 @@
     <None Include="resources\AddFile_16x.png" />
     <None Include="resources\Add_16x.png" />
     <None Include="resources\Delete_16x.png" />
+    <Content Include="新图标.ico" />
     <Content Include="键盘管家.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
