--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -42,6 +42,12 @@
             <setting name="sendtime" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="title" serializeAs="String">
+                <value>键盘管家</value>
+            </setting>
+            <setting name="doforceclose" serializeAs="String">
+                <value>False</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
