--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -48,6 +48,9 @@
             <setting name="doforceclose" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="imgsendtime" serializeAs="String">
+                <value>10</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
