--- a/keyboardmgr/Settings1.settings
+++ b/keyboardmgr/Settings1.settings
@@ -26,5 +26,8 @@
     <Setting Name="imgsendtime" Type="System.Decimal" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="doopendevelopingfeatures" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
