--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -51,6 +51,9 @@
             <setting name="imgsendtime" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="doopendevelopingfeatures" serializeAs="String">
+                <value>False</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
