--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -54,6 +54,9 @@
             <setting name="doopendevelopingfeatures" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="dostartup" serializeAs="String">
+                <value>False</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
