--- a/keyboardmgr/Settings1.settings
+++ b/keyboardmgr/Settings1.settings
@@ -32,5 +32,8 @@
     <Setting Name="dostartup" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="listsendtime" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
