--- a/keyboardmgr/app.config
+++ b/keyboardmgr/app.config
@@ -57,6 +57,9 @@
             <setting name="dostartup" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="listsendtime" serializeAs="String">
+                <value>1000</value>
+            </setting>
         </keyboardmgr.Settings1>
     </userSettings>
 </configuration>
